Added rooting and inner-page linking

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,9 +52,10 @@ p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
+
 /* header */
 
-logo {
+#logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
@@ -66,7 +67,7 @@ logo {
   line-height: 1;
 }
 
-logo:hover {
+#logo:hover {
   color: #fff;
   text-decoration: none;
 }
